--- a/.env.local
+++ b/.env.local
@@ -37,10 +37,10 @@ NEXT_PUBLIC_HOMEPAGE_PLATE_BACKGROUND=rgba(51, 53, 67, 1)
 NEXT_PUBLIC_HOMEPAGE_PLATE_TEXT_COLOR=rgba(165, 252, 122, 1)
 
 ## navigation
-NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/blockscout/frontend-configs/main/configs/network-logos/sepolia.svg
-NEXT_PUBLIC_NETWORK_LOGO_DARK=https://raw.githubusercontent.com/blockscout/frontend-configs/main/configs/network-logos/sepolia.svg
-NEXT_PUBLIC_NETWORK_ICON=https://i.ibb.co/7QkScT2/lichtbit.png
-NEXT_PUBLIC_NETWORK_ICON_DARK=https://i.ibb.co/7QkScT2/lichtbit.png
+NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/GFE-Foundation/.github/main/profile/logo.svg
+NEXT_PUBLIC_NETWORK_LOGO_DARK=https://raw.githubusercontent.com/GFE-Foundation/.github/main/profile/logo.svg
+NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/GFE-Foundation/.github/main/profile/icon.svg
+NEXT_PUBLIC_NETWORK_ICON_DARK=https://raw.githubusercontent.com/GFE-Foundation/.github/main/profile/icon.svg
 NEXT_PUBLIC_FEATURED_NETWORKS="/configs/GFE featured networks.json"
 NEXT_PUBLIC_OTHER_LINKS=[{'url':'https://drpc.org/chainlist/evmos','text':'Public RPC'}]
 NEXT_PUBLIC_NAVIGATION_HIGHLIGHTED_ROUTES=['/blocks','/apps']
@@ -124,13 +124,11 @@ NEXT_PUBLIC_VISUALIZE_API_HOST=http://0.0.0.0:8081
 NEXT_PUBLIC_STATS_API_HOST=http://0.0.0.0:8080
 
 ## web3 wallet integration (add token or network to the wallet)
-NEXT_PUBLIC_WEB3_WALLET=metamask
+NEXT_PUBLIC_WEB3_WALLETS=metamask
 NEXT_PUBLIC_WEB3_DISABLE_ADD_TOKEN_TO_WALLET=false
 
 ## transaction interpretation
 NEXT_PUBLIC_TRANSACTION_INTERPRETATION_PROVIDER=blockscout
-
-## verified tokens info
 
 ## name service integration
 NEXT_PUBLIC_NAME_SERVICE_API_HOST=https://bens-rs-test.k8s-dev.blockscout.com
