--- a/.env.local
+++ b/.env.local
@@ -37,23 +37,25 @@ NEXT_PUBLIC_HOMEPAGE_PLATE_BACKGROUND=rgba(51, 53, 67, 1)
 NEXT_PUBLIC_HOMEPAGE_PLATE_TEXT_COLOR=rgba(165, 252, 122, 1)
 
 ## navigation
-NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/GFE-Foundation/.github/main/profile/logo.svg
-NEXT_PUBLIC_NETWORK_LOGO_DARK=https://raw.githubusercontent.com/GFE-Foundation/.github/main/profile/logo.svg
-NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/GFE-Foundation/.github/main/profile/icon.svg
-NEXT_PUBLIC_NETWORK_ICON_DARK=https://raw.githubusercontent.com/GFE-Foundation/.github/main/profile/icon.svg
-NEXT_PUBLIC_FEATURED_NETWORKS="/configs/GFE featured networks.json"
+NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/GFE-Foundation/.github/auxiliary/profile/logo.svg
+NEXT_PUBLIC_NETWORK_LOGO_DARK=https://raw.githubusercontent.com/GFE-Foundation/.github/auxiliary/profile/logo.svg
+NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/GFE-Foundation/.github/auxiliary/profile/icon.svg
+NEXT_PUBLIC_NETWORK_ICON_DARK=https://raw.githubusercontent.com/GFE-Foundation/.github/auxiliary/profile/icon.svg
+# NEXT_PUBLIC_FEATURED_NETWORKS="https://raw.githubusercontent.com/GFE-Foundation/.github/auxiliary/profile/featured_networks.json"
 NEXT_PUBLIC_OTHER_LINKS=[{'url':'https://drpc.org/chainlist/evmos','text':'Public RPC'}]
 NEXT_PUBLIC_NAVIGATION_HIGHLIGHTED_ROUTES=['/blocks','/apps']
-NEXT_PUBLIC_NAVIGATION_LAYOUT=horizontal
+# NEXT_PUBLIC_NAVIGATION_LAYOUT=horizontal
 
 ## footer
-NEXT_PUBLIC_FOOTER_LINKS="/configs/GFE footer links.json"
+# NEXT_PUBLIC_FOOTER_LINKS="https://raw.githubusercontent.com/GFE-Foundation/.github/auxiliary/profile/footer_links.json"
+NEXT_PUBLIC_FEATURED_NETWORKS=https://raw.githubusercontent.com/blockscout/frontend-configs/main/configs/featured-networks/eth-sepolia.json
+NEXT_PUBLIC_FOOTER_LINKS=https://raw.githubusercontent.com/blockscout/frontend-configs/main/configs/footer-links/sepolia.json
 
 ## favicon
 # # FAVICON_GENERATOR_API_KEY=xxx
 
 ## meta
-NEXT_PUBLIC_OG_IMAGE_URL=https://raw.githubusercontent.com/GFE-Foundation/.github/main/profile/OG_Image.png
+NEXT_PUBLIC_OG_IMAGE_URL=https://raw.githubusercontent.com/GFE-Foundation/.github/auxiliary/profile/OG_Image.png
 NEXT_PUBLIC_OG_ENHANCED_DATA_ENABLED=true
 NEXT_PUBLIC_SEO_ENHANCED_DATA_ENABLED=true
 
@@ -124,7 +126,7 @@ NEXT_PUBLIC_VISUALIZE_API_HOST=http://0.0.0.0:8081
 NEXT_PUBLIC_STATS_API_HOST=http://0.0.0.0:8080
 
 ## web3 wallet integration (add token or network to the wallet)
-NEXT_PUBLIC_WEB3_WALLETS=metamask
+NEXT_PUBLIC_WEB3_WALLETS=['token_pocket', 'metamask']
 NEXT_PUBLIC_WEB3_DISABLE_ADD_TOKEN_TO_WALLET=false
 
 ## transaction interpretation
