--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@blockscout/bens-types": "1.4.1",
     "@blockscout/stats-types": "1.6.0",
     "@blockscout/visualizer-types": "0.2.0",
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "2.7.1",
     "@chakra-ui/theme-tools": "^2.0.18",
     "@emotion/react": "^11.10.4",
