--- a/package.json
+++ b/package.json
@@ -102,6 +102,8 @@
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.33.1",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0",
     "react-identicons": "^1.2.5",
     "react-intersection-observer": "^9.5.2",
     "react-jazzicon": "^1.0.4",
