fix: Add boxShadow to ColorSettingSwitch and ChainIndicatorItem

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Original .env.example
 NEXT_PUBLIC_SENTRY_DSN=https://sentry.io
 SENTRY_CSP_REPORT_URI=https://sentry.io
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=xxx
@@ -8,3 +9,195 @@ NEXT_PUBLIC_GROWTH_BOOK_CLIENT_KEY=xxx
 NEXT_PUBLIC_AUTH0_CLIENT_ID=xxx
 FAVICON_GENERATOR_API_KEY=xxx
 NEXT_PUBLIC_GROWTH_BOOK_CLIENT_KEY=xxx
+
+# Total envs.
+## App configuration
+NEXT_PUBLIC_APP_PROTOCOL=
+NEXT_PUBLIC_APP_HOST=
+NEXT_PUBLIC_APP_PORT=
+NEXT_PUBLIC_USE_NEXT_JS_PROXY=
+## Blockchain parameters
+NEXT_PUBLIC_NETWORK_NAME=
+NEXT_PUBLIC_NETWORK_SHORT_NAME=
+NEXT_PUBLIC_NETWORK_ID=
+NEXT_PUBLIC_NETWORK_RPC_URL=
+NEXT_PUBLIC_NETWORK_CURRENCY_NAME=
+NEXT_PUBLIC_NETWORK_CURRENCY_WEI_NAME=
+NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=
+NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=
+NEXT_PUBLIC_NETWORK_SECONDARY_COIN_SYMBOL=
+NEXT_PUBLIC_NETWORK_MULTIPLE_GAS_CURRENCIES=
+NEXT_PUBLIC_NETWORK_VERIFICATION_TYPE=
+NEXT_PUBLIC_NETWORK_TOKEN_STANDARD_NAME=
+NEXT_PUBLIC_IS_TESTNET=
+## API configuration
+NEXT_PUBLIC_API_PROTOCOL=
+NEXT_PUBLIC_API_HOST=
+NEXT_PUBLIC_API_PORT=
+NEXT_PUBLIC_API_BASE_PATH=
+NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=
+## UI configuration
+### Homepage
+NEXT_PUBLIC_HOMEPAGE_CHARTS=
+NEXT_PUBLIC_HOMEPAGE_STATS=
+NEXT_PUBLIC_HOMEPAGE_PLATE_TEXT_COLOR=
+NEXT_PUBLIC_HOMEPAGE_PLATE_BACKGROUND=
+NEXT_PUBLIC_HOMEPAGE_HERO_BANNER_CONFIG=
+### Navigation
+NEXT_PUBLIC_NETWORK_LOGO=
+NEXT_PUBLIC_NETWORK_LOGO_DARK=
+NEXT_PUBLIC_NETWORK_ICON=
+NEXT_PUBLIC_NETWORK_ICON_DARK=
+NEXT_PUBLIC_FEATURED_NETWORKS=
+NEXT_PUBLIC_OTHER_LINKS=
+NEXT_PUBLIC_NAVIGATION_HIDDEN_LINKS=
+NEXT_PUBLIC_NAVIGATION_HIGHLIGHTED_ROUTES=
+NEXT_PUBLIC_NAVIGATION_LAYOUT=
+### Footer links
+NEXT_PUBLIC_FOOTER_LINKS=
+### Favicon
+FAVICON_GENERATOR_API_KEY=
+FAVICON_MASTER_URL=
+### Meta
+NEXT_PUBLIC_PROMOTE_BLOCKSCOUT_IN_TITLE=
+NEXT_PUBLIC_OG_DESCRIPTION=
+NEXT_PUBLIC_OG_IMAGE_URL=
+NEXT_PUBLIC_OG_ENHANCED_DATA_ENABLED=
+NEXT_PUBLIC_SEO_ENHANCED_DATA_ENABLED=
+### Views
+#### Block Views
+NEXT_PUBLIC_VIEWS_BLOCK_HIDDEN_FIELDS=
+#### Address Views
+NEXT_PUBLIC_VIEWS_ADDRESS_IDENTICON_TYPE=
+NEXT_PUBLIC_VIEWS_ADDRESS_HIDDEN_VIEWS=
+NEXT_PUBLIC_VIEWS_CONTRACT_SOLIDITYSCAN_ENABLED=
+NEXT_PUBLIC_VIEWS_CONTRACT_EXTRA_VERIFICATION_METHODS=
+#### Transaction Views
+NEXT_PUBLIC_VIEWS_TX_HIDDEN_FIELDS=
+NEXT_PUBLIC_VIEWS_TX_ADDITIONAL_FIELDS=
+#### NFT Views
+NEXT_PUBLIC_VIEWS_NFT_MARKETPLACES=
+### Misc
+NEXT_PUBLIC_NETWORK_EXPLORERS=
+NEXT_PUBLIC_CONTRACT_CODE_IDES=
+NEXT_PUBLIC_HAS_CONTRACT_AUDIT_REPORTS=
+NEXT_PUBLIC_HIDE_INDEXING_ALERT_BLOCKS=
+NEXT_PUBLIC_HIDE_INDEXING_ALERT_INT_TXS=
+NEXT_PUBLIC_MAINTENANCE_ALERT_MESSAGE=
+NEXT_PUBLIC_COLOR_THEME_DEFAULT=
+NEXT_PUBLIC_FONT_FAMILY_HEADING=
+NEXT_PUBLIC_FONT_FAMILY_BODY=
+## App Features
+### My Account
+NEXT_PUBLIC_IS_ACCOUNT_SUPPORTED=
+NEXT_PUBLIC_AUTH0_CLIENT_ID=
+NEXT_PUBLIC_AUTH_URL=
+NEXT_PUBLIC_LOGOUT_URL=
+### Gas Tracker
+NEXT_PUBLIC_GAS_TRACKER_ENABLED=
+NEXT_PUBLIC_GAS_TRACKER_UNITS=
+### Address Verification in "My Account"
+NEXT_PUBLIC_CONTRACT_INFO_API_HOST=
+NEXT_PUBLIC_ADMIN_SERVICE_API_HOST=
+### Blockchain Interaction
+NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
+NEXT_PUBLIC_NETWORK_RPC_URL=
+NEXT_PUBLIC_NETWORK_NAME=
+NEXT_PUBLIC_NETWORK_ID=
+NEXT_PUBLIC_NETWORK_CURRENCY_NAME=
+NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=
+NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=
+### Banner Ads
+NEXT_PUBLIC_AD_BANNER_PROVIDER=
+NEXT_PUBLIC_AD_BANNER_ADDITIONAL_PROVIDER=
+NEXT_PUBLIC_AD_ADBUTLER_CONFIG_DESKTOP=
+NEXT_PUBLIC_AD_ADBUTLER_CONFIG_MOBILE=
+### Text Ads
+NEXT_PUBLIC_AD_TEXT_PROVIDER=
+### Beacon Chain
+NEXT_PUBLIC_HAS_BEACON_CHAIN=
+NEXT_PUBLIC_BEACON_CHAIN_CURRENCY_SYMBOL=
+### User Operations (ERC-4337)
+NEXT_PUBLIC_HAS_USER_OPS=
+### Rollup Chain
+NEXT_PUBLIC_ROLLUP_TYPE=
+NEXT_PUBLIC_ROLLUP_L1_BASE_URL=
+NEXT_PUBLIC_ROLLUP_L2_WITHDRAWAL_URL=
+NEXT_PUBLIC_FAULT_PROOF_ENABLED=
+NEXT_PUBLIC_HAS_MUD_FRAMEWORK=
+### Export Data to CSV File
+NEXT_PUBLIC_RE_CAPTCHA_APP_SITE_KEY=
+### Google Analytics
+NEXT_PUBLIC_GOOGLE_ANALYTICS_PROPERTY_ID=
+### Mixpanel Analytics
+NEXT_PUBLIC_MIXPANEL_PROJECT_TOKEN=
+### GrowthBook Feature Flagging and A/B Testing
+NEXT_PUBLIC_GROWTH_BOOK_CLIENT_KEY=
+### GraphQL API
+NEXT_PUBLIC_GRAPHIQL_TRANSACTION=
+### REST API
+NEXT_PUBLIC_API_SPEC_URL=
+### Marketplace
+NEXT_PUBLIC_MARKETPLACE_ENABLED=
+NEXT_PUBLIC_MARKETPLACE_CONFIG_URL=
+NEXT_PUBLIC_ADMIN_SERVICE_API_HOST=
+NEXT_PUBLIC_MARKETPLACE_SUBMIT_FORM=
+NEXT_PUBLIC_MARKETPLACE_SUGGEST_IDEAS_FORM=
+NEXT_PUBLIC_NETWORK_RPC_URL=
+NEXT_PUBLIC_MARKETPLACE_CATEGORIES_URL=
+NEXT_PUBLIC_MARKETPLACE_SECURITY_REPORTS_URL=
+NEXT_PUBLIC_MARKETPLACE_FEATURED_APP=
+NEXT_PUBLIC_MARKETPLACE_BANNER_CONTENT_URL=
+NEXT_PUBLIC_MARKETPLACE_BANNER_LINK_URL=
+NEXT_PUBLIC_MARKETPLACE_RATING_AIRTABLE_API_KEY=
+NEXT_PUBLIC_MARKETPLACE_RATING_AIRTABLE_BASE_ID=
+### Solidity to UML Diagrams
+NEXT_PUBLIC_VISUALIZE_API_HOST=
+NEXT_PUBLIC_VISUALIZE_API_BASE_PATH=
+### Blockchain Statistics
+NEXT_PUBLIC_STATS_API_HOST=
+NEXT_PUBLIC_STATS_API_BASE_PATH=
+### Web3 Wallet Integration
+NEXT_PUBLIC_WEB3_WALLETS=
+NEXT_PUBLIC_WEB3_DISABLE_ADD_TOKEN_TO_WALLET=
+### Transaction Interpretation
+NEXT_PUBLIC_TRANSACTION_INTERPRETATION_PROVIDER=
+### Verified Tokens Info
+NEXT_PUBLIC_CONTRACT_INFO_API_HOST=
+### Name Service Integration
+NEXT_PUBLIC_NAME_SERVICE_API_HOST=
+### Metadata Service Integration
+NEXT_PUBLIC_METADATA_SERVICE_API_HOST=
+### Public Tag Submission
+NEXT_PUBLIC_METADATA_SERVICE_API_HOST=
+NEXT_PUBLIC_ADMIN_SERVICE_API_HOST=
+### Data Availability
+NEXT_PUBLIC_DATA_AVAILABILITY_ENABLED=
+### Bridged Tokens
+NEXT_PUBLIC_BRIDGED_TOKENS_CHAINS=
+NEXT_PUBLIC_BRIDGED_TOKENS_BRIDGES=
+### Safe{Core} Address Tags
+NEXT_PUBLIC_SAFE_TX_SERVICE_URL=
+### SUAVE Chain
+NEXT_PUBLIC_IS_SUAVE_CHAIN=
+### MetaSuites Extension
+NEXT_PUBLIC_METASUITES_ENABLED=
+### Validators List
+NEXT_PUBLIC_VALIDATORS_CHAIN_TYPE=
+### Sentry Error Monitoring
+NEXT_PUBLIC_SENTRY_DSN=
+SENTRY_CSP_REPORT_URI=
+NEXT_PUBLIC_SENTRY_ENABLE_TRACING=
+NEXT_PUBLIC_APP_ENV=
+NEXT_PUBLIC_APP_INSTANCE=
+### OpenTelemetry
+OTEL_SDK_ENABLED=
+### DeFi Dropdown
+NEXT_PUBLIC_DEFI_DROPDOWN_ITEMS=
+### Multichain Balance Button
+NEXT_PUBLIC_MULTICHAIN_BALANCE_PROVIDER_CONFIG=
+### Get Gas Button
+NEXT_PUBLIC_GAS_REFUEL_PROVIDER_CONFIG=
+## External services configuration
+### Google ReCaptcha
+NEXT_PUBLIC_RE_CAPTCHA_APP_SITE_KEY=
