--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 # app configuration
 NEXT_PUBLIC_APP_PROTOCOL=https
 NEXT_PUBLIC_APP_HOST=explorer.gfe.foundation
-NEXT_PUBLIC_APP_PORT=3000
+# NEXT_PUBLIC_APP_PORT=3000
 
 
 # blockchain parameters
@@ -20,7 +20,7 @@ NEXT_PUBLIC_IS_TESTNET=true
 NEXT_PUBLIC_API_PROTOCOL=https
 NEXT_PUBLIC_API_HOST=explorer.gfe.foundation
 # NEXT_PUBLIC_API_PORT=80
-NEXT_PUBLIC_API_PORT=6571
+# NEXT_PUBLIC_API_PORT=6571
 NEXT_PUBLIC_API_BASE_PATH=/
 # NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
 
