--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blockscout-frontend",
   "version": "1.0.0",
   "private": false,
-  "homepage": "https://github.com/blockscout/frontend#readme",
+  "homepage": "https://github.com/HighAmbition211/blockscout-frontend",
   "engines": {
     "node": "20.11.0",
     "npm": "10.2.4"
